--- a/scss/styly.scss
+++ b/scss/styly.scss
@@ -6,7 +6,9 @@
 html,
 body {
     height: 100%;
-    font-family: "Manrope";
+    font-family: 'Manrope', sans-serif;
+    // background-color: #F8F8F8;
+    // z-index: -3;
 }
 
 .wrapper {
@@ -14,7 +16,6 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    // background-color: #f8f8f8;
 }
 
 .main {
@@ -24,6 +25,10 @@ body {
 .container {
     width: 1170px;
     margin: 0 auto;
+}
+
+.block-1__wrapper {
+    z-index: 2;
 }
 
 .header {
@@ -451,7 +456,6 @@ body {
             height: 1px;
             background-color: #333333;
             transform: rotate(-72deg);
-            margin-right: 40px;
         }
 
         .product__1-first {
@@ -824,6 +828,7 @@ body {
         align-items: center;
 
         position: absolute;
+        transition: all 0.3s ease 0s;
     }
 
     &__plus-1 {
@@ -851,6 +856,7 @@ body {
         left: 1116px;
     }
 
+    // Блок з текстом
     .special__block-1,
     .special__block-2,
     .special__block-3,
@@ -896,13 +902,257 @@ body {
         bottom: 130px;
     }
 }
-.special__wrapper.open {
-    display: block;
-}
+
 /* //Materials and Features */
 
+/* Which size POTR block-7 */
+.block-7 {
+    margin: 7px 0;
+
+    &__wrapper {
+        padding: 100px 0;
+    }
+
+    &__wrap {
+        display: flex;
+    }
+
+    &__title {
+        font-family: "Bebas Neue";
+        font-size: 36px;
+        font-weight: 400;
+        line-height: 54px;
+        letter-spacing: 0.155em;
+        min-width: 650px;
+    }
+
+    &__column {
+        margin: 66px 0 0 0;
+    }
+
+    &__text-bottom {
+        margin-top: 109px;
+        width: 546px;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #4f4f4f;
+    }
+}
+
+.column {
+
+    &__col {
+        display: flex;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color: #4f4f4f;
+
+        p {
+            width: 240px;
+            margin-right: 16px;
+        }
+    }
 
 
+    &__wrap {
+        margin: 0px 96px 40px 0px;
+        padding-left: 30px;
+    }
+
+    &__subtitle {
+        font-family: "Bebas Neue";
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 18px;
+        letter-spacing: 0.155em;
+
+    }
+
+    &__text {
+        margin-top: 10px;
+    }
+
+    &__img {
+        max-width: 528px;
+        max-height: 427px;
+    }
+}
+
+.column__col-2 {
+    height: 257px;
+    border-left: 1px #d8d8d8 solid;
+}
+
+/* Which size POTR block-7 */
+
+/* block-8 */
+.bloc-8 {
+    position: relative;
+
+    &__wrapper {
+        display: flex;
+    }
+}
+
+.col {
+
+    &__img {
+        max-width: 593px;
+        // max-height: 792px;
+        z-index: -1;
+
+        position: absolute;
+        top: -40px;
+        left: -83px;
+    }
+
+    &__wrap {
+        margin: 140px 0 150px 520px;
+    }
+
+    &__row-first {
+        width: 642px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__row-second {
+        margin-top: 40px;
+    }
+
+    &__row-title {
+        position: relative;
+        font-size: 36px;
+        font-weight: 700;
+        line-height: 54px;
+        color: #333333;
+        margin-left: 20px;
+
+        span {
+            position: absolute;
+            width: 7.17px;
+            height: 7.17px;
+            left: -20px;
+            top: 23px;
+            align-items: center;
+
+            background: #4F4F4F;
+            transform: rotate(-45deg);
+        }
+    }
+
+    &__row-text {
+        font-size: 16px;
+        line-height: 24px;
+        color: #828282;
+        margin: 5px 0 0 20px;
+    }
+
+    &__row-btn {
+        border: 1px var(--my_Turquoise) solid;
+        width: 238px;
+        height: 48px;
+        margin-top: 60px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        span {
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 21px;
+            color: #121212;
+            background-color: white;
+            border: solid white;
+        }
+    }
+
+    &__row-sail {
+        width: 540px;
+        margin-left: 110px;
+
+        .row__sail-title {
+            font-family: "Bebas Neue";
+            font-size: 36px;
+            font-weight: 400;
+            line-height: 54px;
+            letter-spacing: 0.155em;
+            color: var(--my_Red);
+            margin-top: 70px;
+        }
+
+        .row__sail-subtitle {
+            font-family: "Bebas Neue";
+            font-size: 24px;
+            font-weight: 400;
+            line-height: 24px;
+            letter-spacing: 0.155em;
+            color: #03839E;
+            margin-top: 5px;
+        }
+    }
+}
+
+/* block-8 */
+
+/* block-9 */
+.block-9 {
+
+    &__wrapper {
+        height: 567px;
+    }
+
+    &__column {}
+
+    &__absolute {
+        position: relative;
+    }
+
+    &__column-col {}
+}
+
+.yellow-square {
+    height: 567px;
+    width: 1304px;
+    left: -135px;
+    top: 0px;
+    border-radius: 0px;
+    background-color: #FFEC7A;
+
+    position: absolute;
+    z-index: -1;
+
+}
+
+.yellow-print {
+    position: absolute;
+    width: 161px;
+    height: 164px;
+    right: -85px;
+    top: -95px;
+}
+
+.column {
+
+    &__col-title {}
+
+    &__col-subtitle {}
+
+    &__col-form {}
+
+    &__col-info {}
+}
+
+.col-info {
+
+    &__phone {}
+}
+
+
+/* block-9 */
 
 /* footer */
 .info {
